<resources>
    <string name="app_name">AppDesafioPicPay</string>
    <string name="Card_number">Número do cartão</string>
    <string name="cadCard">Cadastrar Cartão</string>
    <string name="Card_name">Nome do titular</string>
    <string name="Card_ExpDate">Data de expiração</string>
    <string name="Card_CVV">CVV</string>
    <string name="Card_Save">Salvar</string>
    <string name="Help_Card_number">Digite o número do seu cartão</string>
    <string name="RegisterCardButton">Cadastrar cartão</string>
    <string name="CP_Register_a_card_text">Cadastre um cartão de crédito</string>
    <string name="CP_Register_a_card_hint">Para fazer pagamentos para outras pessoas você precisa cadastrar um cartão de crédito pessoal.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>