<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardPrimingActivity"
    tools:ignore="ExtraText"
    android:background="@color/PicPayBackground">
    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        style="@style/PicPayBackButton"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/CPcardIlustration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_card_ilustration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </androidx.appcompat.widget.AppCompatImageView>
        <TextView
            android:id="@+id/cpCreditCardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CP_Register_a_card_text"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/CPcardIlustration" />
        <TextView
            android:id="@+id/cpCreditCardHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CP_Register_a_card_hint"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cpCreditCardTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/CCEntryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/picpaybutton"
            android:text="@string/RegisterCardButton"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
